[package]
name = "xdp-check"
version = "0.1.0"
edition = "2021"
authors = ["XDP compatibility checker"]
description = "check XDP compatibility and verify XDP runtime status"

[dependencies]
# CLI interface
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

nix = { version = "0.29", features = ["net", "uio", "fs", "resource", "user", "feature"] }
libc = "0.2"
caps = "0.5"
procfs = "0.18"

netlink-packet-core = "0.7"
netlink-packet-route = "0.20"
netlink-sys = "0.8"
rtnetlink = "0.15"
tokio = { version = "1.42", features = ["rt", "macros"] }

colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "2.0"

log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
